--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,5 @@
 spring.mvc.pathmatch.matching-strategy: ant_path_matcher
 chromadb-base-url: https://chromadb-6mxzvcwm2a-uc.a.run.app
 chromadb-db-name: cookgptrag
+llm-model-name: phi-2
+llm-base-url:  https://localai-6mxzvcwm2a-uc.a.run.app
